--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -459,35 +459,35 @@
                     <div style="width:30%; height:100%">
                         <div class="temperature-level-bar">
                             <div class="temperature-level1"
-                                style="--i:1px; --tDelay:0.28s; background-color: rgb(255, 0, 0);"></div>
+                                style="--i:1px; --tDelay:0.28s;"></div>
                             <div class="temperature-level1"
-                                style="--i:3px; --tDelay:0.26s; background-color: rgb(230, 25, 25);"></div>
+                                style="--i:3px; --tDelay:0.26s;"></div>
                             <div class="temperature-level1"
-                                style="--i:5px; --tDelay:0.24s; background-color: rgb(230, 42, 25);"></div>
+                                style="--i:5px; --tDelay:0.24s;"></div>
                             <div class="temperature-level1"
-                                style="--i:7px; --tDelay:0.22s; background-color: rgb(230, 59, 25);"></div>
+                                style="--i:7px; --tDelay:0.22s;"></div>
                             <div class="temperature-level1"
-                                style="--i:9px; --tDelay:0.20s; background-color: rgb(230, 76, 25);"></div>
+                                style="--i:9px; --tDelay:0.20s;"></div>
                             <div class="temperature-level1"
-                                style="--i:11px; --tDelay:0.18s; background-color: rgb(230, 110, 25);"></div>
+                                style="--i:11px; --tDelay:0.18s;"></div>
                             <div class="temperature-level1"
-                                style="--i:13px; --tDelay:0.16s; background-color: rgb(230, 145, 25);"></div>
+                                style="--i:13px; --tDelay:0.16s;"></div>
                             <div class="temperature-level1"
-                                style="--i:15px; --tDelay:0.14s; background-color: rgb(230, 196, 25);"></div>
+                                style="--i:15px; --tDelay:0.14s;"></div>
                             <div class="temperature-level1"
-                                style="--i:17px; --tDelay:0.12s; background-color: rgb(196, 230, 25);"></div>
+                                style="--i:17px; --tDelay:0.12s;"></div>
                             <div class="temperature-level1"
-                                style="--i:19px; --tDelay:0.10s; background-color: rgb(179, 230, 25);"></div>
+                                style="--i:19px; --tDelay:0.10s;"></div>
                             <div class="temperature-level1"
-                                style="--i:21px; --tDelay:0.08s; background-color: rgb(162, 230, 25);"></div>
+                                style="--i:21px; --tDelay:0.08s;"></div>
                             <div class="temperature-level1"
-                                style="--i:23px; --tDelay:0.06s; background-color: rgb(145, 230, 25);"></div>
+                                style="--i:23px; --tDelay:0.06s;"></div>
                             <div class="temperature-level1"
-                                style="--i:25px; --tDelay:0.04s; background-color: rgb(128, 230, 25);"></div>
+                                style="--i:25px; --tDelay:0.04s;"></div>
                             <div class="temperature-level1"
-                                style="--i:27px; --tDelay:0.02s; background-color: rgb(110, 230, 25);"></div>
+                                style="--i:27px; --tDelay:0.02s;"></div>
                             <div class="temperature-level1"
-                                style="--i:29px; --tDelay:0.0s; background-color: rgb(93, 230, 25);"></div>
+                                style="--i:29px; --tDelay:0.0s;"></div>
                         </div>
                     </div>
                 </div>
