--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -2369,23 +2369,41 @@
         // Temperature
         var temperature1ID = document.getElementById('temperature1');
         var temperature2ID = document.getElementById('temperature2');
-        var temperature1LevelID = document.getElementsByClassName('temperature-level1');
-        var temperature2LevelID = document.getElementsByClassName('temperature-level2');
+        var temperature1LevelClass = document.getElementsByClassName('temperature-level1');
+        var temperature2LevelClass = document.getElementsByClassName('temperature-level2');
         var maxValue1 = 350;
         var maxValue2 = 100;
 
         setInterval(function () {
-            var tempreatureValue1 = Math.floor(Math.random() * maxValue1);
-            temperature1ID.innerText = tempreatureValue1;
+            var tempreatureValue1 = Math.random() * maxValue1;
+            temperature1ID.innerText = Math.floor(tempreatureValue1);
 
             var tempreatureValue2 = (Math.random() * maxValue2).toFixed(1);
             temperature2ID.innerText = tempreatureValue2;
 
-            let levelBarCount1 = 15 / maxValue1 * tempreatureValue1;
-            let levelBarCount2 = 15 / maxValue2 * tempreatureValue2;
-            
-            for (let i = 14; i >= 0; i--) {
-                temperature1LevelID[i].style.opacity = 1.0;
+            let levelBarCount1 = Math.floor(15 / maxValue1 * tempreatureValue1);
+            let levelBarCount2 = Math.floor(15 / maxValue2 * tempreatureValue2);
+
+            var maxIndex = 14;
+            var valueIndex = maxIndex - levelBarCount1;
+
+            var i = 0;
+            for (i; i < valueIndex; i++) {
+                temperature1LevelClass[i].style.opacity = 0.05;
+            }
+            for (i; i < maxIndex; i++) {
+                let opacityValue = 1.0 - 0.9 / maxIndex * i;
+                temperature1LevelClass[i].style.opacity = opacityValue;
+            }
+
+            valueIndex = maxIndex - levelBarCount2;
+            i = 0;
+            for (i; i < valueIndex; i++) {
+                temperature2LevelClass[i].style.opacity = 0.05;
+            }
+            for (i; i < maxIndex; i++) {
+                let opacityValue = 1.0 - 0.9 / maxIndex * i;
+                temperature2LevelClass[i].style.opacity = opacityValue;
             }
 
         }, 3000);
