login page design and session flask

--- a/raon-control/login.html
+++ b/raon-control/login.html
@@ -9,7 +9,7 @@
         <div id="login-menu">
             <input type="text" id="id">
             <input type="password" id="password">
-            <input type="button" id="signin" value="Sign in">
+            <input type="button" id="signin" value="Sign in" onclick="signin()">
         </div>
     </div>
 
@@ -35,7 +35,7 @@
 
         <div id="container">
             <div id="raon-box">
-                <svg width="218.9826" height="55.3802">
+                <!-- <svg width="218.9826" height="55.3802">
                     <style>
                         .raon-color {
                             fill: #fff;
@@ -51,7 +51,7 @@
                         d="M187.9187,9.9471a4.6352,4.6352,0,0,0-8.33,2.7979V54.9162h9.2692V31.7437l-.0462-6.9486h.0462l5.0182,6.9486,16.7769,21.7992a4.6345,4.6345,0,0,0,8.33-2.7975V8.5741h-9.2692v23.17l.0463,6.9517h-.0463l-5.0181-6.9517Z" />
                     <path class="raon-color"
                         d="M63.6294,31.4322l8.206,8.9258L84.3582,54.9162H72.0671L53.777,32.38a2.0549,2.0549,0,0,1-.48-1.33,2.0846,2.0846,0,0,1,2.0856-2.0841H67.8961a6.0246,6.0246,0,1,0,0-12.0491l-55.1511,0a4.171,4.171,0,0,1,0-8.342H68.8229A14.4844,14.4844,0,0,1,83.4218,22.9412a14.2155,14.2155,0,0,1-4.6342,10.4969c-2.609,2.3987-5.9275,3.5192-10.3122,3.5192" />
-                </svg>
+                </svg> -->
             </div>
             <div id="control-system">Control System</div>
         </div>
@@ -60,6 +60,33 @@
 </body>
 
 <script>
+    var serverAddr = 'http://192.168.68.126:9014';
+
+    function signin() {
+      var xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function () {
+        if (this.readyState == 4 && this.status == 200) {
+          console.log(this.responseText);
+          window.location.href = defaultURL + '/main'
+          console.log(this.responseText);
+
+        }
+        else {
+          // alert('Status Error : ' + this.status);
+          document.getElementById('message').innerText = this.responseText
+        }
+      };
+
+      var userID = document.getElementById('id').value
+      var passwd = document.getElementById('password').value
+
+      var userInfo = { 'id': userID, 'pw': passwd }
+      var rName = serverAddr + '/login'
+      xhttp.open("POST", rName, true);
+      xhttp.setRequestHeader('Content-Type', 'application/json');
+      xhttp.send(JSON.stringify(userInfo));
+    }
+    
     function timer() {
         var d = new Date();
         document.getElementById('time-stamp').innerHTML = d.toLocaleTimeString('en-GB');
@@ -67,7 +94,6 @@
 
     window.onload = function () {
         // setInterval(timer, 1000);
-
     }
 
 </script>
