--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -18,7 +18,7 @@
                 d="M12.5,0H0L57,76a10,10,0,0,0,8,4H335a10,10,0,0,0,8-4L400,0H387.5L338,66a10,10,0,0,1-8,4H70a10,10,0,0,1-8-4Z"
                 style="fill:#f3f3f3" />
         </svg>
-        <div id="raon-box"><a href="main.html"><img src="images/raon-white.svg"></a></div>
+        <div id="raon-box"><a href="main.html"><img width="133.7666" height="33.8293" src="images/raon-white.svg"></a></div>
         <div id="accelerator-control"><a href="members.html">Accelerator Control</a></div>
         <div id="left-menu">
             <a href="" class="secret-menu">Logbook</a>
