--- a/raon-control/documents.html
+++ b/raon-control/documents.html
@@ -34,77 +34,40 @@
         </div>
     </div>
 
-    <div style="height:160px"></div>
+    <div style="height:50px"></div>
 
     <div id="body-contain" style="margin:auto; position:relative; width:1920px; height:750px;">
+        <div id="page-title">Documents and User Guide for The RAON Accelerator Control System</div>
+        <div id="page-abstract">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsumhas been the
+            industry's
+            standard dummy text ever since the 1500s, when an unknown printer took a galley.</div>
+        <div id="classification">
+            <label class="checkbox-container">EPICS
+                <input type="checkbox" id="epics">
+                <span class="checkmark"></span>
+            </label>
 
-        <div class="container">
-            <div class="letter">
-                <p>EPICS is a set of software tools and applications for distributed control systems.</p>
-            </div>
-        </div>
+            <label class="checkbox-container">CSS
+                <input type="checkbox" id="css">
+                <span class="checkmark"></span>
+            </label>
 
+            <label class="checkbox-container">Network
+                <input type="checkbox" id="css">
+                <span class="checkmark"></span>
+            </label>
 
-        <div class="container">
-            <div class="letter">
-                <h2>Step1. Installation</h2>
-                <p>EPICS can download on the EPICS download page</p>
-            </div>
-            <div class="console-window">
-                <div class="console-title">
-                    <div class="title-button button-red"></div>
-                    <div class="title-button button-yellow"></div>
-                    <div class="title-button button-green"></div>
-                </div>
-                <div class="console-body">
-                    <p><span class="no-selection">$</span> wget
-                        https://epics-controls.org/download/base/base-3.15.7.tar.gz</p>
-                    <p><span class="no-selection">$</span> tar xvf base-3.15.7.tar.gz</p>
-                    <p><span class="no-selection">$</span> cd base-3.15.7</p>
-                    <p><span class="no-selection">base-3.15.7$</span> make</p>
-                </div>
-            </div>
-        </div>
+            <label class="checkbox-container">Service
+                <input type="checkbox" id="css">
+                <span class="checkmark"></span>
+            </label>
 
-        <div class="container">
-            <div class="letter">
-                <h2>Step2. Environment Configuration</h2>
-                <p>Before use the EPICS, we need a configuration of environment path</p>
-            </div>
+            <label class="checkbox-container">Label
+                <input type="checkbox" id="css">
+                <span class="checkmark"></span>
+            </label>
 
-            <div class="console-window">
-                <div class="console-title">
-                    <div class="title-button button-red"></div>
-                    <div class="title-button button-yellow"></div>
-                    <div class="title-button button-green"></div>
-                </div>
-                <div class="console-body">
-                    <p>$ export PATH=$PATH:/home/scwook/base-3.15.7/bin</p>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="container">
-            <div class="letter">
-                <h2>Step3. Example</h2>
-                <p>Now, we can use the EPICS. Let's start get some example</p>
-            </div>
-
-            <div class="console-window">
-                <div class="console-title">
-                    <div class="title-button button-red"></div>
-                    <div class="title-button button-yellow"></div>
-                    <div class="title-button button-green"></div>
-                </div>
-                <div class="console-body">
-                    <p>$ mkdir myExample</p>
-                    <p>$ cd myExample</p>
-                    <p>myExample$ makeBaseApp -t example example</p>
-                    <p>myExample$ makeBaseApp -i -t example example</p>
-                    <p>myExample$ make</p>
-                </div>
-            </div>
         </div>
     </div>
 </body>
