document page check form color

--- a/raon-control/documents.html
+++ b/raon-control/documents.html
@@ -45,79 +45,79 @@
         <div id="classification">
             <label class="checkbox-container">EPICS
                 <input type="checkbox" id="epics">
-                <span class="checkmark"></span>
+                <span class="checkmark" style="--borderColor: #00D8C3; --backgroundColor: #00D8C3;"></span>
             </label>
 
             <label class="checkbox-container">CSS
                 <input type="checkbox" id="css">
-                <span class="checkmark"></span>
+                <span class="checkmark" style="--borderColor: #29ABE2; --backgroundColor: #29ABE2;"></span>
             </label>
 
             <label class="checkbox-container">Network
                 <input type="checkbox" id="css">
-                <span class="checkmark"></span>
+                <span class="checkmark" style="--borderColor: #ED1E79; --backgroundColor: #ED1E79;"></span>
             </label>
 
             <label class="checkbox-container">Service
                 <input type="checkbox" id="css">
-                <span class="checkmark"></span>
+                <span class="checkmark" style="--borderColor: #8CC63F; --backgroundColor: #8CC63F;"></span>
             </label>
 
-            <label class="checkbox-container">Label
+            <label class="checkbox-container">Local
                 <input type="checkbox" id="css">
-                <span class="checkmark"></span>
+                <span class="checkmark" style="--borderColor: #F7931E; --backgroundColor: #F7931E;"></span>
             </label>
         </div>
 
         <div class="document-list">
-            <div class="document-color-1"></div>
+            <div class="document-color" style="--backgroundColor: #00D8C3;"></div>
             <div class="document-content">
-                <div class="content-number" style="color:#00D8C3">Document 1-1</div>
+                <div class="content-number" style="--textColor: #00D8C3;">Document 1-1</div>
                 <div class="content-title">EPICS Installation</div>
                 <div class="content-abstract">Installation Guide the EPICS base with standard & script</div>
             </div>
         </div>
 
         <div class="document-list">
-            <div class="document-color-2"></div>
+            <div class="document-color" style="--backgroundColor: #29ABE2;"></div>
             <div class="document-content">
-                <div class="content-number" style="color:#29ABE2">Document 1-1</div>
+                <div class="content-number" style="--textColor: #29ABE2;">Document 1-1</div>
                 <div class="content-title">EPICS Installation</div>
                 <div class="content-abstract">Installation Guide the EPICS base with standard & script</div>
             </div>
         </div>
 
         <div class="document-list">
-            <div class="document-color-3"></div>
+            <div class="document-color" style="--backgroundColor: #ED1E79;"></div>
             <div class="document-content">
-                <div class="content-number" style="color:#ED1E79">Document 1-1</div>
+                <div class="content-number" style="--textColor: #ED1E79;">Document 1-1</div>
                 <div class="content-title">EPICS Installation</div>
                 <div class="content-abstract">Installation Guide the EPICS base with standard & script</div>
             </div>
         </div>
 
         <div class="document-list">
-            <div class="document-color-4"></div>
+            <div class="document-color" style="--backgroundColor: #8CC63F;"></div>
             <div class="document-content">
-                <div class="content-number" style="color:#8CC63F">Document 1-1</div>
+                <div class="content-number" style="--textColor: #8CC63F;">Document 1-1</div>
                 <div class="content-title">EPICS Installation</div>
                 <div class="content-abstract">Installation Guide the EPICS base with standard & script</div>
             </div>
         </div>
 
         <div class="document-list">
-            <div class="document-color-5"></div>
+            <div class="document-color" style="--backgroundColor: #F7931E;"></div>
             <div class="document-content">
-                <div class="content-number" style="color:#F7931E">Document 1-1</div>
+                <div class="content-number" style="--textColor: #F7931E;">Document 1-1</div>
                 <div class="content-title">EPICS Installation</div>
                 <div class="content-abstract">Installation Guide the EPICS base with standard & script</div>
             </div>
         </div>
 
         <div class="document-list">
-            <div class="document-color-1"></div>
+            <div class="document-color" style="--backgroundColor: #00D8C3;"></div>
             <div class="document-content">
-                <div class="content-number" style="color:#00D8C3">Document 1-1</div>
+                <div class="content-number" style="--textColor: #00D8C3;">Document 1-1</div>
                 <div class="content-title">EPICS Installation</div>
                 <div class="content-abstract">Installation Guide the EPICS base with standard & script</div>
             </div>
