redesign document form

--- a/raon-control/doc-1-1.html
+++ b/raon-control/doc-1-1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" type="text/css" href="common.css">
-<link rel="stylesheet" type="text/css" href="document.css">
+<link rel="stylesheet" type="text/css" href="doc-1-1.css">
 
 <body>
     <div style="margin:auto; position: relative; width:1920px; height:80px;">
@@ -34,22 +34,19 @@
         </div>
     </div>
 
-    <div style="height:160px"></div>
+    <div style="height:50px"></div>
 
     <div id="body-contain" style="margin:auto; position:relative; width:1920px; height:750px;">
 
         <div class="container">
-            <div class="letter">
-                <p>EPICS is a set of software tools and applications for distributed control systems.</p>
-            </div>
+            <p id="title">EPICS Installation Guide</p>
+            <p class="substance">EPICS is a set of software tools and applications for distributed control systems.</p>
         </div>
 
-
         <div class="container">
-            <div class="letter">
-                <h2>Step1. Installation</h2>
-                <p>EPICS can download on the EPICS download page</p>
-            </div>
+            <p class="subtitle">Step1. Installation</p>
+            <p class="substance">EPICS can download on the EPICS download page</p>
+
             <div class="console-window">
                 <div class="console-title">
                     <div class="title-button button-red"></div>
@@ -67,10 +64,8 @@
         </div>
 
         <div class="container">
-            <div class="letter">
-                <h2>Step2. Environment Configuration</h2>
-                <p>Before use the EPICS, we need a configuration of environment path</p>
-            </div>
+            <p class="subtitle">Step2. Environment Configuration</p>
+            <p class="substance">Before use the EPICS, we need a configuration of environment path</p>
 
             <div class="console-window">
                 <div class="console-title">
@@ -86,10 +81,8 @@
 
 
         <div class="container">
-            <div class="letter">
-                <h2>Step3. Example</h2>
-                <p>Now, we can use the EPICS. Let's start get some example</p>
-            </div>
+            <p class="subtitle">Step3. Example</p>
+            <p class="substance">Now, we can use the EPICS. Let's start get some example</p>
 
             <div class="console-window">
                 <div class="console-title">
