--- a/raon-control/documents.html
+++ b/raon-control/documents.html
@@ -73,7 +73,7 @@
             <div class="document-color" style="--backgroundColor: #00D8C3;"></div>
             <div class="document-content">
                 <div class="content-number" style="--textColor: #00D8C3;">Document 1-1</div>
-                <div class="content-title">EPICS Installation</div>
+                <div class="content-title"><a href="doc-1-1.html">EPICS Installation</a></div>
                 <div class="content-abstract">Installation Guide the EPICS base with standard & script</div>
             </div>
         </div>
